# aravis-detector

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js  switcher.json
.doctrees/: environment.pickle  index.doctree
.doctrees/developer/: index.doctree
.doctrees/developer/explanations/: aravis-detector.doctree  arvcli.doctree  index.doctree
.doctrees/developer/reference/: aravis-detector.doctree  arvcli.doctree  index.doctree
.doctrees/user/: index.doctree
.doctrees/user/explanations/: aravis-detector.doctree  index.doctree
.doctrees/user/reference/: camera.doctree  index.doctree
.doctrees/user/tutorials/: build.doctree  index.doctree  run.doctree  tools.doctree
.github/workflows/: cpp.yml  docs.yml
_sources/developer/: index.md.txt
_sources/developer/explanations/: aravis-detector.md.txt  arvcli.md.txt
_sources/user/: index.md.txt
config/: configPlugin.json  connectCamera.json  connect_cam.json  fp-aravis.json  getConfig.json  odin_server.cfg  setConfig.json  startVideo.json  stopVideo.json
cpp/: CMakeLists.txt
cpp/AravisPlugin/: CMakeLists.txt
cpp/AravisPlugin/src/: AravisDetectorPlugin.cpp  AravisDetectorPluginLib.cpp  CMakeLists.txt
cpp/cmake/: FindARAVIS.cmake  FindGLIB.cmake  FindODINDATA.cmake
developer/: index.html
developer/explanations/: aravis-detector.html  arvcli.html  index.html
developer/reference/: aravis-detector.html  arvcli.html  index.html
docs/: Doxyfile  conf.py  doc_requirements.txt  index.md  odin-objects.inv  sphinx.yaml  start_fp_example.json
docs/src/: index.md  install.md  user_guide.md
docs/user/: index.md
python/: setup.cfg
python/src/aravis_detector/: aravis_detector_adapter.py  aravis_detector_control.py
python/tools/: setup.py
python/tools/arvcli/: __init__.py  __main__.py  cli.py  config.json  config.yaml  control.py
python/tools/python_cli/: __main__.py  cli.py  control.py
static/: index.html
static/js/: aravis.js  odin-data.js
test/: test_plugin.json  test_run.py
user/: index.html
user/explanations/: aravis-detector.html  index.html
user/reference/: camera.html  index.html
user/tutorials/: build.html  index.html  run.html  tools.html
(+17 files in other folders)
