[metadata]
name = aravis-detector
description = ODIN control interface for Aravis detectors
url = https//github.com/odin-detector/odin-data
author = Alan Greer
author_email = ajg@observatorysciences.co.uk
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
package_dir =
    =src

install_requires =
    #odin-control @ git+https://git@github.com/odin-detector/odin-control.git
    #odin-data @ git+https://git@github.com/odin-detector/odin-data.git
    #posix_ipc>=1.0.4
    #pysnmp>=4.4.4
    #numpy>=1.14.0
    #pyzmq>=17.1.0
    #pygelf>=0.3.5

[options.extras_require]
# For development tests/docs
dev =
    pytest
    pytest-cov
    # Docs
    sphinx-autobuild
    sphinx-external-toc
    sphinx-design
    myst-parser
    breathe
    pydata-sphinx-theme

[options.packages.find]
where = src

[options.entry_points]
# Include a command line script
console_scripts =

[flake8]
max-line-length = 100

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    ./
    **/site-packages/

[versioneer]
VCS = git
style = pep440
versionfile_source = src/aravis_detector/_version.py
versionfile_build = aravis_detector/_version.py
tag_prefix=